--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registro de Personas</title>
+    <title>Registro de Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
 <style>
@@ -22,19 +22,19 @@
       <div class="row">
         <div class="col"></div>
         <div class="col">
-          <form class="formdata" method="POST" action="/personas" >
+          <form class="formdata" method="POST" action="/productos" >
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Nombre</label>
+              <label for="exampleInputEmail1" class="form-label">Nombre del Producto</label>
               <input type="text" name="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Apellido</label>
-              <input type="text" name ="lastname" class="form-control" id="exampleInputPassword1">
+              <label for="exampleInputPassword1" class="form-label">Url de la foto</label>
+              <input type="text" name ="url" class="form-control" id="exampleInputPassword1">
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Edad</label>
-              <input type="text" name="age" class="form-control" id="exampleInputPassword1">
+              <label for="exampleInputPassword1" class="form-label">Precio</label>
+              <input type="text" name="price" class="form-control" id="exampleInputPassword1">
             </div>
             <button type="submit" class="btn btn-primary">Guardar</button>
           </form>
@@ -48,7 +48,7 @@
         <div class="col"></div>
         <div class="col">
 
-          <% if(persons.length == 0){ %>
+          <% if(productos.length == 0){ %>
             <div class="alert alert-danger" role="alert">
              No se han encontrado personas!
             </div>
@@ -58,18 +58,18 @@
             <thead>
               <tr>
                 <th scope="col">Nombre</th>
-                <th scope="col">Apellido</th>
-                <th scope="col">Edad</th>
+                <th scope="col">Url </th>
+                <th scope="col">Precio</th>
               </tr>
             </thead>
             <tbody>
 
-              <% persons.forEach(i => {  %>
+              <% productos.forEach(i => {  %>
 
               <tr>
                 <td><%= i.name %></td>
-                <td><%= i.lastname %></td>
-                <td><%= i.age %></td>
+                <td><%= i.url %></td>
+                <td><%= i.price %></td>
               </tr>
 
               <% }); %>
